Fixed overlaps navbar on dc profile

--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ ul a.a_icon:hover {background-color: unset;}
     float: none;
     background-color: rgba(75, 75, 75, 0.9);
     transition:0.3s;
-    z-index: 1;
+    z-index: 100;
     box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
     min-width: 160px;
     margin-left: -4px;
